# Asset-Management

./: .gitignore  README.md  docker-compose.yml  render.yaml  temp_import.py  temp_test_borrow.py
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_accounts.py  9ae0bf8004b0_enterprise_upgrades.py  b4e621340e1e_add_eam_tables.py  c1a2b3d4e5f6_branches_and_role_tiers.py  d2e3f4a5b6c7_merge_locations_into_branches.py
backend/app/: __init__.py  main.py
backend/app/assets/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/audit/: models.py  service.py
backend/app/auth/: router.py  schemas.py  service.py
backend/app/borrowing/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/branches/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/core/: __init__.py  bootstrap.py  config.py  dependencies.py  pagination.py  reference_data.py  security.py
backend/app/database/: session.py
backend/app/departments/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/reports/: router.py
backend/app/users/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/utils/: __init__.py  email.py
backend/cea_asset_management_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_user_service.py
docs/: authentication.md  backend-api.md  borrowing.md  feature-01-foundation-and-accounts.md  frontend-architecture.md  overview.md
(+39 files in other folders)
