[project]
name = "cea-asset-management-api"
version = "0.1.0"
description = "Internal asset management API for Collective Energy Africa"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "bcrypt>=4.1.3",
    "email-validator>=2.2.0",
    "fastapi>=0.111.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "qrcode[pil]>=7.4.2",
    "sqlalchemy>=2.0.31",
    "uvicorn[standard]>=0.30.1"
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.2",
    "ruff>=0.5.5"
]

[tool.ruff]
line-length = 100
target-version = "py312"
